Bump MaxPermSize for integs. Addresses #40 (hopefully)